# Frontier-Compass

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
configs/: user_defaults.example.json
docs/: final_bug_sweep_round2.md  final_live_validation_remediation_report.md  final_live_validation_report.md  final_pre_ship_confirmation.md  final_release_readiness_audit.md  final_release_readiness_audit_supplement.md  live_validation.md  pre_release_bug_sweep_report.md  provenance.md  tutorial.md
src/frontier_compass/: __init__.py  api.py
src/frontier_compass/cli/: __init__.py  main.py
src/frontier_compass/common/: __init__.py  frontier_report.py  frontier_report_llm.py  report_mode.py  source_bundles.py  text_normalization.py  user_defaults.py
src/frontier_compass/exploration/: __init__.py  selector.py
src/frontier_compass/ingest/: __init__.py  arxiv.py  biorxiv.py  common.py  medrxiv.py  source_snapshots.py
src/frontier_compass/ranking/: __init__.py  relevance.py
src/frontier_compass/reporting/: __init__.py  daily_brief.py  html_report.py
src/frontier_compass/storage/: __init__.py  schema.py
tests/: test_acceptance.py  test_cli.py  test_daily_brief.py  test_email_delivery.py  test_explainability.py  test_exploration_selector.py  test_frontier_report.py  test_history.py  test_ingest.py  test_live_path_contract.py  test_public_api.py  test_relevance.py  test_report_mode.py  test_smoke.py  test_source_bundles.py  test_streamlit_support.py  test_surface_freeze.py  test_ui_support.py  test_user_defaults.py  test_zotero_profile.py
(+12 files in other folders)
