[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-compass"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" },
]
description = "Python library, local CLI, and Streamlit UI for arXiv-first biomedical research scouting"
keywords = ["research", "arxiv", "biorxiv", "medrxiv", "zotero", "streamlit"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "streamlit>=1.39,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
frontier-compass = "frontier_compass.cli.main:main_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
